--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Homework1</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div  class="top center">
+    <section class="header">
+        <h1 class="main__header">Добро пожаловать <br> на мой сайт !</h1>
+        <p class="text">Вам предстоит пройти несколько увлекательных игр. Если готов нажимай поехали и приступай</p>
+        <button class="header__button">Поехали!</button>
+    </section>
+    </div>
+    <div class="for-box center">
+        <div class="for__item for__item_1">Игра 1</div>
+        <div class="for__item for__item_2">Игра 2</div>
+        <div class="for__item for__item_3">Игра 3</div>
+    </div>
 </body>
 </html>
